[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://art/Pixel Heart Sprite Sheet 32x32.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=5]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "get_hit",
"speed": 5.0
} ]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -120.0
margin_right = 90.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="Highscore" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -171.0
margin_top = 144.0
margin_right = 164.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 1 )
text = "Highscore
"
align = 1
script = SubResource( 5 )

[node name="Score" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.5
margin_top = 150.0
margin_right = 22.5
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -39.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Collect Good Fruits, Dodge Bad Fruits"
align = 1
autowrap = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Life1" type="AnimatedSprite" parent="."]
position = Vector2( 1792, 64 )
frames = SubResource( 4 )
animation = "get_hit"

[node name="Life2" type="AnimatedSprite" parent="."]
position = Vector2( 1744, 64 )
frames = SubResource( 4 )
animation = "get_hit"

[node name="Life3" type="AnimatedSprite" parent="."]
position = Vector2( 1696, 64 )
frames = SubResource( 4 )
animation = "get_hit"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
